<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/setup_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ls_white"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:visibility="gone">
...
